deployments/home-automation/homeautomation.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: "home-automation"
  name: "home-automation-ingress"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - home-automation.192.168.1.100.nip.io
    secretName: "home-automation.192.168.1.100.nip.io-prod-tls"
  rules:
  - host: "home-automation.192.168.1.100.nip.io"
    http:
      paths:
        - backend:
            serviceName: "home-assistant"
            servicePort: 80
          path: ""
